k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: user-service

spec:
  replicas: 1

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: user-service

  template:
    metadata:
      labels:
        app: user-service

    spec:
      containers:
        - name: user-service

          image: user-service:latest

          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080
