k8s/service.yml
apiVersion: v1
kind: Service

metadata:
  name: user-service

spec:
  type: ClusterIP

  selector:
    app: user-service

  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
